--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,9 +3,12 @@ name: Next.js Lint
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'frontend/**'
   pull_request:
     branches: [ main ]
-
+    paths:
+      - 'frontend/**'
 jobs:
   lint:
     name: Run Next.js Lint
