--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,5 +1,4 @@
 name: Next.js Lint
-
 on:
   push:
     branches: [ main ]
@@ -13,6 +12,9 @@ jobs:
   lint:
     name: Run Next.js Lint
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     
     steps:
       - name: Checkout code
@@ -23,6 +25,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
           
       - name: Install dependencies
         run: npm ci
