--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -23,11 +23,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.18.0'
+          node-version: '18'
           cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
           
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         
       - name: Run Next.js lint
         run: npm run lint
