setup for user registration

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 .vscode/
+
+
+*.py[cod]
+__pycache__/
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+env/
+.env
+
+# Django stuff:
+*.log
+db.sqlite3
+db.sqlite3-journal
+
