--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "django-allauth (>=65.7.0,<66.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "jwt (>=1.3.1,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
 ]
 
 
