--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "jwt (>=1.3.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "beautifulsoup4 (>=4.13.4,<5.0.0)",
 ]
 
 
