--- a/backend/.env_example
+++ b/backend/.env_example
@@ -2,8 +2,8 @@ SECRET_KEY='your_key_here'
 DEBUG=''
 
 # PostgreSQL credentials
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
