--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -15,8 +15,8 @@ COPY pyproject.toml poetry.lock ./
 
 # Install Poetry and project deps
 RUN pip install poetry \
-    && poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+  && poetry config virtualenvs.create false \
+  && poetry install --no-interaction --no-ansi --without dev
 
 # Copy all code
 COPY . .
