--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -13,10 +13,10 @@ WORKDIR /app
 # Copy Poetry files
 COPY pyproject.toml poetry.lock ./
 
-# Install Poetry and project deps
 RUN pip install poetry \
-    && poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+ && poetry config virtualenvs.create false \
+ && poetry install --no-interaction --no-ansi
+
 
 # Copy all code
 COPY . .
