--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,18 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "build",
-        "-t", "gcr.io/$PROJECT_ID/cwdef-backend:$SHORT_SHA",
+        "-t", "gcr.io/$PROJECT_ID/cwdef-backend:$COMMIT_SHA",
         "-f", "backend/Dockerfile",
         "backend"
       ]
-
   - name: "gcr.io/cloud-builders/docker"
     args:
-      [ "push", "gcr.io/$PROJECT_ID/cwdef-backend:$SHORT_SHA" ]
+      [ "push", "gcr.io/$PROJECT_ID/cwdef-backend:$COMMIT_SHA" ]
 
 images:
-  - "gcr.io/$PROJECT_ID/cwdef-backend:$SHORT_SHA"
-
-options:
-  logging: "CLOUD_LOGGING_ONLY"
+  - "gcr.io/$PROJECT_ID/cwdef-backend:$COMMIT_SHA"
