changed frontend endpoint in django settings

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ db.sqlite3-journal
 # backend/Connect_Waseda_backend/events/migrations/0002_alter_event_organizer.py
 # backend/Connect_Waseda_backend/meetups/migrations/0001_initial.py
 backend.zip
+frontend.zip
